src/styles/layouts/productsLayout.module.css
.layoutContainer {
    display: flex;
}

/* Menu de hamburguesa */
.burgerMenu {
    display: none;
    position: sticky;
    top: 0;
    z-index: 1;
    background-color: #272727;
}

.burgerMenu button {
    padding: 10px 7px;
    background-color: inherit;
    border: none;
    outline: none;
}

.burgerMenu button span {
    display: block;
    width: 30px;
    height: 4px;
    background-color: white;
    margin-bottom: 5px;
    border-radius: 5px;
}

.burgerMenu button span:last-of-type {
    margin-bottom: 0;
}

/* Contenedor de sidebar */
.layoutSidebarContainer {
    flex: 0 0 20%;
    min-width: 250px;
    overflow-y: scroll;
    height: 100vh;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.layoutSidebarContainer button {
    display: none;
}

.layoutSidebarContainer::-webkit-scrollbar {
    display: none;
}

/* Contenedor del contenido principal */
.layoutContentContainer {
    flex: 1 1 80%;
    max-height: 100vh;
    overflow-y: scroll;
}

@media screen and (max-width:900px) {
    .layoutContainer {
        flex-direction: column;
    }

    .layoutContentContainer {
        max-height: initial;
        overflow-y: auto;
    }

    .burgerMenu {
        display: block;
    }

    .layoutSidebarContainer {
        position: fixed;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        background-color: rgba(39, 39, 39, 0.5);
        z-index: 2;
        display: none;
    }

    .layoutSidebarContainer button {
        display: block;
        position: absolute;
        top: 0;
        right: 0;
        color: white;
        background-color: transparent;
        font-size: 2rem;
        padding: 0 10px;
        border: none;
        outline: none;
    }

    .layoutSidebarContainer.active {
        display: block;
    }
}

